--- a/index.html
+++ b/index.html
@@ -192,44 +192,16 @@
       </div>
 
       <div class="canvas">
-         <h2>Business Model Canvas</h2>
+          <h2>Business Model Canvas</h2>
 
-         <div class="canvas-container-top">
-            <div class="canvas-vert-cont">
-               <h4>Socios Clave</h4>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                  in dui non nunc pulvinar varius in quis felis. Sed eleifend
-                  erat at risus finibus, quis rutrum felis egestas. Vivamus
-                  vitae varius felis. Suspendisse quis tortor eget metus
-                  convallis eleifend quis.
-               </p>
+          <h3>Imagen del Business Model Canvas (formanto estándar):</h3>
+          <img src="/assets/canvas.png" alt="" class="canvas-img">
 
-            </div>
-            <div class="canvas-mini-cont">
-               <div class="canvas-mini">
-                  <h4>Actividades Clave</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis
-                     egestas. Vivamus vitae varius felis. Suspendisse quis
-                     tortor eget metus convallis eleifend quis.
-                  </p>
-               </div>
-               <div class="canvas-mini">
-                  <h4>Recursos Clave</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis
-                     egestas. Vivamus vitae varius felis. Suspendisse quis
-                     tortor eget metus convallis eleifend quis.
-                  </p>
-               </div>
-            </div>
+          <h3>Business Model Canvas (formato por casilla).</h3>
 
-            <div class="canvas-vert-cont">
+
+         <div class="canvas-top">
+            <div class="canvas-card col-1">
                <h4>Propuesta de Valor</h4>
                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
@@ -238,34 +210,33 @@
                   vitae varius felis. Suspendisse quis tortor eget metus
                   convallis eleifend quis.
                </p>
-
             </div>
-            <div class="canvas-mini-cont">
-               <div class="canvas-mini">
-                  <h4>Relaciones con Clientes</h4>
+
+            <div>
+               <div class="canvas-card col-2">
+                  <h4>Actividades Clave</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                      Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis
-                     egestas. Vivamus vitae varius felis. Suspendisse quis
-                     tortor eget metus convallis eleifend quis.
+                     eleifend erat at risus finibus, quis rutrum felis egestas.
+                     Vivamus vitae varius felis. Suspendisse quis tortor eget
+                     metus convallis eleifend quis.
                   </p>
                </div>
-               <div class="canvas-mini">
-                  <h4>Canales</h4>
+               <div class="canvas-card col-2">
+                  <h4>Recursos Clave</h4>
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                      Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis
-                     egestas. Vivamus vitae varius felis. Suspendisse quis
-                     tortor eget metus convallis eleifend quis.
+                     eleifend erat at risus finibus, quis rutrum felis egestas.
+                     Vivamus vitae varius felis. Suspendisse quis tortor eget
+                     metus convallis eleifend quis.
                   </p>
                </div>
-
             </div>
 
-             <div class="canvas-vert-cont">
-               <h4>Segmentos de Marcado</h4>
+            <div class="canvas-card col-3">
+               <h4>Socios Clave</h4>
                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                   in dui non nunc pulvinar varius in quis felis. Sed eleifend
@@ -273,13 +244,45 @@
                   vitae varius felis. Suspendisse quis tortor eget metus
                   convallis eleifend quis.
                </p>
+            </div>
 
+            <div >
+               <div class="canvas-card-mini col-4">
+                  <h4>Relaciones con Clientes</h4>
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
+                     eleifend erat at risus finibus, quis rutrum felis egestas.
+                     Vivamus vitae varius felis. Suspendisse quis tortor eget
+                     metus convallis eleifend quis.
+                  </p>
+               </div>
+               <div class="canvas-card-mini col-4">
+                  <h4>Canales</h4>
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
+                     eleifend erat at risus finibus, quis rutrum felis egestas.
+                     Vivamus vitae varius felis. Suspendisse quis tortor eget
+                     metus convallis eleifend quis.
+                  </p>
+               </div>
+            </div>
+
+            <div class="canvas-card col-5">
+               <h4>Segmentos de Clientes</h4>
+               <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                  in dui non nunc pulvinar varius in quis felis. Sed eleifend
+                  erat at risus finibus, quis rutrum felis egestas. Vivamus
+                  vitae varius felis. Suspendisse quis tortor eget metus
+                  convallis eleifend quis.
+               </p>
             </div>
          </div>
 
-         <div class="canvas-container-below">
-              <div class="rows">
-            <div class="char">
+         <div class="canvas-bottom">
+            <div class="canvas-card col-6">
                <h4>Estructura de Costos</h4>
                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
@@ -289,8 +292,7 @@
                   convallis eleifend quis.
                </p>
             </div>
-
-            <div class="char">
+            <div class="canvas-card col-7">
                <h4>Fuentes de Ingresos</h4>
                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
@@ -300,7 +302,6 @@
                   convallis eleifend quis.
                </p>
             </div>
-         </div>
          </div>
       </div>
    </body>
