--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2>Enfoque STEAM</h2>
 
             <h3>¿Qué es STEAM?</h3>
-            <p>
+            <p class="steam-text">
                La metodología STEAM es un enfoque educativo interdisciplinario
                que integra Ciencia (Science), Tecnología (Technology),
                Ingeniería (Engineering), Arte (Art) y Matemáticas (Mathematics)
@@ -281,9 +281,7 @@
                      metus convallis eleifend quis.
                   </p>
                </div>
-            </div>
 
-            <div class="canvas-bottom">
                <div class="canvas-card col-6">
                   <h4>Estructura de Costos</h4>
                   <p>
@@ -305,11 +303,14 @@
                   </p>
                </div>
             </div>
+
          </div>
       </div>
    </body>
 
    <footer class="footer">
-      <p class="footer-text">&copy; Empresaurios. Todos los derechos reservados. </p>
+      <p class="footer-text">
+         &copy; Empresaurios. Todos los derechos reservados.
+      </p>
    </footer>
 </html>
