Cambiar Lorem Ipsum por texto veridico

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             <div class="hwe-text">
                <h2>¿Quiénes somos?</h2>
                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                  ut turpis in velit suscipit malesuada. Phasellus faucibus ex
-                  sed purus volutpat faucibus. Sed a auctor urna, ut congue
-                  sapien. Nullam suscipit sed massa eu sagittis. Donec consequat
-                  maximus massa vel ornare. Maecenas dictum nisl in nunc
-                  condimentum iaculis. Curabitur tortor nisl, pharetra ac
-                  ullamcorper sed, maximus sed lacus. Morbi ac sem felis.
+                  Somos un grupo de jóvenes apasionados por la innovación, la
+                  sostenibilidad y el impacto positivo en el entorno industrial.
+                  Como futuros emprendedores, compartimos la visión de crear
+                  soluciones tecnológicas que contribuyan a mejorar la calidad
+                  del aire y reducir la huella ambiental de las empresas.
+                  Nuestro propósito con EcoBreathe es impulsar un cambio hacia
+                  prácticas más limpias y responsables, desarrollando
+                  purificadores de aire industriales que combinen eficiencia,
+                  accesibilidad y compromiso ecológico.
                </p>
             </div>
             <div class="hwe-img">
@@ -38,26 +40,18 @@
             <div class="mision">
                <h2>Misión</h2>
                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                  ut turpis in velit suscipit malesuada. Phasellus faucibus ex
-                  sed purus volutpat faucibus. Sed a auctor urna, ut congue
-                  sapien. Nullam suscipit sed massa eu sagittis. Donec consequat
-                  maximus massa vel ornare. Maecenas dictum nisl in nunc
-                  condimentum iaculis. Curabitur tortor nisl, pharetra ac
-                  ullamcorper sed, maximus sed lacus. Morbi ac sem felis.
+                  Proveer soluciones de purificación de aire a empresas con
+                  altas emisiones de CO₂, reduciendo la contaminación y
+                  contribuyendo al cuidado del medio ambiente.
                </p>
             </div>
 
             <div class="vision">
                <h2>Visión</h2>
                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                  ut turpis in velit suscipit malesuada. Phasellus faucibus ex
-                  sed purus volutpat faucibus. Sed a auctor urna, ut congue
-                  sapien. Nullam suscipit sed massa eu sagittis. Donec consequat
-                  maximus massa vel ornare. Maecenas dictum nisl in nunc
-                  condimentum iaculis. Curabitur tortor nisl, pharetra ac
-                  ullamcorper sed, maximus sed lacus. Morbi ac sem felis.
+                  Ser la marca líder en purificación de aire industrial en
+                  México, promoviendo un futuro con aire más limpio y sostenible
+                  para todas las empresas y la sociedad.
                </p>
             </div>
 
@@ -92,55 +86,55 @@
                   <p class="subtitle">S</p>
                   <p class="subtitle">(Science)</p>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     En EcoBreathe aplicamos la ciencia para entender los
+                     procesos de contaminación industrial y la calidad del aire,
+                     investigando cómo el CO₂ y otros contaminantes afectan la
+                     salud y el entorno. Esto nos permite fundamentar nuestras
+                     soluciones en datos confiables y evidencia científica.
                   </p>
                </div>
                <div class="steam-cards">
                   <p class="subtitle">T</p>
                   <p class="subtitle">(Technology)</p>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     La tecnología es clave para desarrollar purificadores de
+                     aire industriales equipados con sensores y sistemas de
+                     monitoreo que registran la calidad del aire en tiempo real,
+                     permitiendo optimizar su funcionamiento y garantizar la
+                     eficiencia del prototipo.
                   </p>
                </div>
                <div class="steam-cards">
                   <p class="subtitle">E</p>
                   <p class="subtitle">(Engineering)</p>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     Mediante la ingeniería diseñamos y construimos prototipos
+                     escalables y eficientes, seleccionando materiales adecuados
+                     y aplicando principios de optimización de flujo de aire y
+                     filtración, asegurando que los purificadores sean
+                     funcionales y sostenibles.
                   </p>
                </div>
                <div class="steam-cards">
                   <p class="subtitle">A</p>
                   <p class="subtitle">(Art)</p>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     El arte se refleja en el diseño industrial y la
+                     presentación de nuestros purificadores, así como en la
+                     comunicación visual de resultados, permitiendo que la
+                     innovación sea atractiva, comprensible y alineada con los
+                     valores de sostenibilidad y estética industrial.
                   </p>
                </div>
                <div class="steam-cards">
                   <p class="subtitle">M</p>
                   <p class="subtitle">(Mathematics)</p>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     Las matemáticas nos permiten calcular la eficiencia de los
+                     filtros, proyectar costos y recursos necesarios, y medir el
+                     desempeño del prototipo, asegurando que las decisiones del
+                     proyecto estén respaldadas por análisis cuantitativos
+                     precisos.
                   </p>
                </div>
             </div>
@@ -151,48 +145,56 @@
             <div class="rows">
                <div class="char">
                   <h4>Fortalezas</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
-                  </p>
+                  <ul>
+                     <li>
+                        Tecnología innovadora de purificación de aire con carbón
+                        activado y nanotecnología.
+                     </li>
+                     <li>
+                        Producto escalable que puede adaptarse a distintos
+                        tamaños de empresa y sectores.
+                     </li>
+                  </ul>
                </div>
 
                <div class="char">
                   <h4>Oportunidades</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
-                  </p>
+                  <ul>
+                     <li>
+                        Creciente interés empresarial en sostenibilidad y
+                        reducción de huella de carbono.
+                     </li>
+                     <li>
+                        Posibilidad de expansión hacia otros sectores con
+                        necesidad crítica de calidad de aire.
+                     </li>
+                  </ul>
                </div>
             </div>
 
             <div class="rows">
                <div class="char">
                   <h4>Debilidades</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
-                  </p>
+                  <ul>
+                     <li>
+                        Falta de validación de mercado y retroalimentación
+                        directa de clientes.
+                     </li>
+                  </ul>
                </div>
 
                <div class="char">
                   <h4>Amenazas</h4>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
-                  </p>
+                  <ul>
+                     <li>
+                        Competencia con tecnologías de purificación de aire ya
+                        consolidadas.
+                     </li>
+                     <li>
+                        Cambios en regulaciones ambientales que podrían afectar
+                        costos o adopción.
+                     </li>
+                  </ul>
                </div>
             </div>
          </div>
@@ -206,11 +208,10 @@
                <div class="canvas-card col-1">
                   <h4>Propuesta de Valor</h4>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     EcoBreathe ofrece purificadores de aire industriales con
+                     tecnología de carbón activado, más eficientes en la captura
+                     de CO₂ que las soluciones existentes, escalables y
+                     sostenibles para distintos entornos industriales.
                   </p>
                </div>
 
@@ -218,21 +219,16 @@
                   <div class="canvas-card-mini col-2">
                      <h4>Actividades Clave</h4>
                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                        eleifend erat at risus finibus, quis rutrum felis
-                        egestas. Vivamus vitae varius felis. Suspendisse quis
-                        tortor eget metus convallis eleifend quis.
+                        Desarrollo del MVP, pruebas piloto, marketing B2B,
+                        planificación financiera y escalamiento del producto.
                      </p>
                   </div>
                   <div class="canvas-card-mini col-2">
                      <h4>Recursos Clave</h4>
                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                        eleifend erat at risus finibus, quis rutrum felis
-                        egestas. Vivamus vitae varius felis. Suspendisse quis
-                        tortor eget metus convallis eleifend quis.
+                        Equipo con experiencia industrial, tecnología propia de
+                        purificación, proveedores de materiales y alianzas con
+                        incubadoras y socios estratégicos.
                      </p>
                   </div>
                </div>
@@ -240,11 +236,8 @@
                <div class="canvas-card col-3">
                   <h4>Socios Clave</h4>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     Proveedores de componentes, empresas piloto, incubadoras y
+                     otros programas de apoyo a startups verdes.
                   </p>
                </div>
 
@@ -252,21 +245,17 @@
                   <div class="canvas-card-mini col-4">
                      <h4>Relaciones con Clientes</h4>
                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                        eleifend erat at risus finibus, quis rutrum felis
-                        egestas. Vivamus vitae varius felis. Suspendisse quis
-                        tortor eget metus convallis eleifend quis.
+                        Soporte técnico, asesoramiento en instalación,
+                        seguimiento de desempeño y programas de fidelización
+                        para mantener relaciones de largo plazo.
                      </p>
                   </div>
                   <div class="canvas-card-mini col-4">
                      <h4>Canales</h4>
                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                        eleifend erat at risus finibus, quis rutrum felis
-                        egestas. Vivamus vitae varius felis. Suspendisse quis
-                        tortor eget metus convallis eleifend quis.
+                        Ventas directas, alianzas con distribuidores de
+                        tecnología industrial y participación en ferias y
+                        exposiciones de innovación ambiental.
                      </p>
                   </div>
                </div>
@@ -274,43 +263,37 @@
                <div class="canvas-card col-5">
                   <h4>Segmentos de Clientes</h4>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     Empresas manufactureras e industriales preocupadas por la
+                     calidad del aire y la sostenibilidad, con posibilidad de
+                     expansión a oficinas, laboratorios y plantas sensibles a la
+                     contaminación.
                   </p>
                </div>
 
                <div class="canvas-card col-6">
                   <h4>Estructura de Costos</h4>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     Desarrollo de prototipos, producción, pruebas piloto,
+                     marketing, salarios, licencias y patentes, asegurando un
+                     crecimiento sostenible.
                   </p>
                </div>
                <div class="canvas-card col-7">
                   <h4>Fuentes de Ingresos</h4>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Morbi in dui non nunc pulvinar varius in quis felis. Sed
-                     eleifend erat at risus finibus, quis rutrum felis egestas.
-                     Vivamus vitae varius felis. Suspendisse quis tortor eget
-                     metus convallis eleifend quis.
+                     Venta de purificadores, servicios de instalación y
+                     mantenimiento, y posibles licencias o contratos de uso de
+                     la tecnología en otros sectores.
                   </p>
                </div>
             </div>
-
          </div>
       </div>
    </body>
 
    <footer class="footer">
       <p class="footer-text">
-         &copy; Empresaurios. Todos los derechos reservados.
+         &copy; EcoBreathe. Todos los derechos reservados.
       </p>
    </footer>
 </html>
