Agregue Esquema Doble Diamante

--- a/index.html
+++ b/index.html
@@ -145,56 +145,52 @@
             <div class="rows">
                <div class="char">
                   <h4>Fortalezas</h4>
-                  <ul>
-                     <li>
-                        Tecnología innovadora de purificación de aire con carbón
-                        activado y nanotecnología.
-                     </li>
-                     <li>
-                        Producto escalable que puede adaptarse a distintos
-                        tamaños de empresa y sectores.
-                     </li>
-                  </ul>
+                  <p>
+                     - Tecnología innovadora de purificación de aire con carbón
+                     activado y nanotecnología.
+                  </p>
+                  <p>
+                     - Producto escalable que puede adaptarse a distintos
+                     tamaños de empresa y sectores.
+                  </p>
                </div>
 
                <div class="char">
                   <h4>Oportunidades</h4>
-                  <ul>
-                     <li>
-                        Creciente interés empresarial en sostenibilidad y
-                        reducción de huella de carbono.
-                     </li>
-                     <li>
-                        Posibilidad de expansión hacia otros sectores con
-                        necesidad crítica de calidad de aire.
-                     </li>
-                  </ul>
+                  <p>
+                     - Creciente interés empresarial en sostenibilidad y
+                     reducción de huella de carbono.
+                  </p>
+                  <p>
+                     - Posibilidad de expansión hacia otros sectores con
+                     necesidad crítica de calidad de aire.
+                  </p>
                </div>
             </div>
 
             <div class="rows">
                <div class="char">
                   <h4>Debilidades</h4>
-                  <ul>
-                     <li>
-                        Falta de validación de mercado y retroalimentación
-                        directa de clientes.
-                     </li>
-                  </ul>
+
+                  <p>
+                     - Falta de validación de mercado y retroalimentación
+                     directa de clientes.
+                  </p>
+
+                  <p>- Falta de capital</p>
                </div>
 
                <div class="char">
                   <h4>Amenazas</h4>
-                  <ul>
-                     <li>
-                        Competencia con tecnologías de purificación de aire ya
-                        consolidadas.
-                     </li>
-                     <li>
-                        Cambios en regulaciones ambientales que podrían afectar
-                        costos o adopción.
-                     </li>
-                  </ul>
+
+                  <p>
+                     - Competencia con tecnologías de purificación de aire ya
+                     consolidadas.
+                  </p>
+                  <p>
+                     - Cambios en regulaciones ambientales que podrían afectar
+                     costos o adopción.
+                  </p>
                </div>
             </div>
          </div>
@@ -202,7 +198,9 @@
          <div class="canvas">
             <h2>Business Model Canvas</h2>
 
-            <img src="/assets/canvas.png" alt="" class="canvas-img" />
+            <div class="canvas-img-cont">
+               <img src="/assets/canvas.png" alt="" class="canvas-img" />
+            </div>
 
             <div class="canvas-top">
                <div class="canvas-card col-1">
@@ -215,22 +213,21 @@
                   </p>
                </div>
 
-               <div class="canvas-mini-cont">
-                  <div class="canvas-card-mini col-2">
-                     <h4>Actividades Clave</h4>
-                     <p>
-                        Desarrollo del MVP, pruebas piloto, marketing B2B,
-                        planificación financiera y escalamiento del producto.
-                     </p>
-                  </div>
-                  <div class="canvas-card-mini col-2">
-                     <h4>Recursos Clave</h4>
-                     <p>
-                        Equipo con experiencia industrial, tecnología propia de
-                        purificación, proveedores de materiales y alianzas con
-                        incubadoras y socios estratégicos.
-                     </p>
-                  </div>
+               <div class="canvas-card col-2">
+                  <h4>Actividades Clave</h4>
+                  <p>
+                     Desarrollo del MVP, pruebas piloto, marketing B2B,
+                     planificación financiera y escalamiento del producto.
+                  </p>
+               </div>
+
+               <div class="canvas-card col-2">
+                  <h4>Recursos Clave</h4>
+                  <p>
+                     Equipo con experiencia industrial, tecnología propia de
+                     purificación, proveedores de materiales y alianzas con
+                     incubadoras y socios estratégicos.
+                  </p>
                </div>
 
                <div class="canvas-card col-3">
@@ -241,23 +238,22 @@
                   </p>
                </div>
 
-               <div class="canvas-mini-cont">
-                  <div class="canvas-card-mini col-4">
-                     <h4>Relaciones con Clientes</h4>
-                     <p>
-                        Soporte técnico, asesoramiento en instalación,
-                        seguimiento de desempeño y programas de fidelización
-                        para mantener relaciones de largo plazo.
-                     </p>
-                  </div>
-                  <div class="canvas-card-mini col-4">
-                     <h4>Canales</h4>
-                     <p>
-                        Ventas directas, alianzas con distribuidores de
-                        tecnología industrial y participación en ferias y
-                        exposiciones de innovación ambiental.
-                     </p>
-                  </div>
+               <div class="canvas-card col-4">
+                  <h4>Relaciones con Clientes</h4>
+                  <p>
+                     Soporte técnico, asesoramiento en instalación, seguimiento
+                     de desempeño y programas de fidelización para mantener
+                     relaciones de largo plazo.
+                  </p>
+               </div>
+
+               <div class="canvas-card col-4">
+                  <h4>Canales</h4>
+                  <p>
+                     Ventas directas, alianzas con distribuidores de tecnología
+                     industrial y participación en ferias y exposiciones de
+                     innovación ambiental.
+                  </p>
                </div>
 
                <div class="canvas-card col-5">
@@ -287,6 +283,14 @@
                   </p>
                </div>
             </div>
+         </div>
+
+         <div class="canvas">
+
+            <h2>Esquema Doble Diamante</h2>
+            <div class="canvas-img-cont">
+               <img src="./assets/double_diamond.png" class="canvas-img">
+            </div> 
          </div>
       </div>
    </body>
